SimpleComplex/Validate 2.x, 2018-08-04
--------------------------------------
- timeISO8601().
- Release 2.1.

SimpleComplex/Validate 2.x, 2018-07-07
--------------------------------------
- Release 2.0.1.

SimpleComplex/Validate 2.x, 2018-06-30
--------------------------------------
- Minor test fix; requires Utils >=1.7.2.

SimpleComplex/Validate 2.x, 2018-06-03
--------------------------------------
- Release 2.0.

SimpleComplex/Validate 2.x, 2018-05-27
--------------------------------------
- Date/Datetime rules have to be named using strict acronym camelCasing because
  native \DateTime does (setISODate());
  renamed dateISO8601Local and dateTimeISO8601.
- ISO-8601 datetime rules allowing sub seconds must default to max 6 digits,
  otherwise native \DateTime will fail.

SimpleComplex/Validate 1.x, 2018-05-25
--------------------------------------
- Datetime ISO-8601 rules with timezone vs. UTC (Z), and Datetime ISO-8601 local.

SimpleComplex/Validate 1.x, 2018-05-21
--------------------------------------
- Prepare for tests.

SimpleComplex/Validate 1.x, 2018-04-07
--------------------------------------
- Release 1.0.1.

SimpleComplex/Validate 1.x, 2018-03-26
--------------------------------------
- empty() shan't check for ArrayObject|ArrayIterator upon checkíng for Countable
  because they are both Countable.

SimpleComplex/Validate 1.x, 2017-09-24
--------------------------------------
- Release 1.0.

SimpleComplex/Validate 1.x, 2017-09-17
--------------------------------------
- Don't cast filter_var() to boolean when filtering (not validating); doh.

SimpleComplex/Validate 1.x, 2017-09-02
--------------------------------------
- Interfaces moved to sub dir/namespace.

SimpleComplex/Validate 1.x, 2017-08-31
--------------------------------------
- challengeRecording: record invalid value when scalar.

SimpleComplex/Validate 1.x, 2017-08-22
--------------------------------------
- Validate constructor do not have to populate non-rule methods instance var.