@@ -1,4 +1,4 @@
-Copyright (c) 2017-2018 Jacob Friis Mathiasen <jacob.friis@simplecomplex.net>
+Copyright (c) 2017-2019 Jacob Friis Mathiasen <jacob.friis@simplecomplex.net>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
